--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="panel" id="home">
     <h1>7napa/9space</h1> 
 
-    <button></button><br><br>
+    <button>.......</button><br><br>
 </div>
 
 
@@ -122,6 +122,26 @@ what sort             it is heavy and falls
   <a class="menu__link" href="#slice3" data-hover="Slice">7</a>
 </div>
 
+
+
+
+<div class="box">
+	<ul class="minbox">
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+	</ul>
+	<ol class="maxbox">
+		<li>1</li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+	</ol>
 
 
 </body>
