--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&family=Roboto+Slab&display=swap" rel="stylesheet"> 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="/script.js" defer></script>
+<script src="script.js" defer></script>
         </head>
 
 <!-- Home -->
